@@ -1,6 +1,6 @@
 ## $Id$
 
-SUBDIRS = ArpMan Chorus Chorus2 Infector Kick PanzerDelay PhatMan WahMan
+SUBDIRS = ArpMan Chorus Chorus2 Infector Kick PanzerDelay PhatMan Philta WahMan
 
 EXTRA_DIST = COPYING
 
